# anatomize

./: .cruft.json  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  hatch.toml  justfile  pyproject.toml  ruff.toml  uv.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
docs/: Makefile  api.md  conf.py  contributing.md  index.md  references.bib
docs/notebooks/: example.ipynb
src/anatomize/: __init__.py
src/anatomize/core/: __init__.py  _typeddict_kwargs.py  dataarray_accessor_api.py  datatree_accessor_api.py  decorators.py  models.py  utils.py
src/anatomize/exposure/: __init__.py  _utils.py  basic.py
tests/: conftest.py  test_basic.py
tests/exposure/: test_basic.py
