[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "anatomize"
dynamic = ["version"]
description = "A very interesting piece of code"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sricharan Reddy Varra" }]
maintainers = [
    { name = "Sricharan Reddy Varra", email = "srivarra@stanford.edu" },
]
dependencies = [
    "anndata",
    # for debug logging (referenced from the issue template)
    "session-info",
    "numpy<2",
    "numba",
    "pandas[performance]",
    "numpydantic[zarr,dask]>=1.6.3",
    "xarray[accel,parallel]",
    "dask[array,distributed,diagnostics]",
    "flox>=0.9.13",
    "einx>=0.3.0",
    "xbatcher>=0.4.0",
    "universal-pathlib>=0.2.5",
    "numbagg>=0.8.2",
    "boost-histogram>=1.5.0",
    "dask-histogram>=2024.9.1",
]
optional-dependencies.spatialdata = ["spatialdata"]
optional-dependencies.dev = [
    "pre-commit",
    "twine>=4.0.2",
    "anatomize[nb]",
    "matplotlib>=3.9.2",
    "hvplot>=0.10.0",
    "spatialdata-plot>=0.2.4",
    "asv>=0.6.4",
    "sphinx-autobuild>=2024.4.16",
    "esbonio>=0.16.4",
]
optional-dependencies.doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "ipykernel",
    "ipython",
    "myst-nb>=1.1",
    "pandas",
    # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
    "setuptools",
    "sphinx>=4",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme>=1",
    "sphinx-copybutton",
    "sphinx-tabs",
    "sphinxcontrib-bibtex>=1",
    "sphinxext-opengraph",
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
    "numpydoc>=1.8.0",
    "scanpydoc>=0.13.6",
]
optional-dependencies.test = [
    "coverage",
    "pytest",
]
optional-dependencies.ci = ["codecov-cli>=0.7.4"]
optional-dependencies.nb = [
    "jupyterlab",
    "notebook",
    "ipylab>=1.0.0",
    "buckaroo>=0.6.12",
    "jupyter-bokeh>=4.0.5",
]
urls.Documentation = "https://anatomize.readthedocs.io/"
urls.Source = "https://github.com/srivarra/anatomize"
urls.Home-page = "https://github.com/srivarra/anatomize"

[tool.coverage.run]
source = ["anatomize"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb",
]
